Sidenav - fix icon alignment.

--- a/scss/_sidenav.scss
+++ b/scss/_sidenav.scss
@@ -61,7 +61,7 @@
 
 					i {
 						top: -23px;
-						margin-left: -5px;
+						margin-left: -10px;
 					}
 
 					i:before {
